<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" >

    <MultiSelectListPreference
        android:dialogTitle="@string/favorite_stations_dialogtitle"
        android:key="favorite_stations"
        android:summary="@string/favorite_stations_summary"        
        android:title="@string/favorite_stations_title"
        android:entries="@array/stationEntries"
        android:entryValues="@array/stationValues"
        android:defaultValue="@array/empty_array" />
    
     <CheckBoxPreference
        android:defaultValue="true"
        android:key="enable_colored_list"
        android:title="@string/enable_colored_list"
        android:summary="@string/enable_colored_list_summary" />
     
     <CheckBoxPreference
        android:defaultValue="false"
        android:key="enable_all_trains"
        android:title="@string/enable_all_trains"
        android:summary="@string/enable_all_trains_summary" />
     

     <ListPreference
        android:key="refresh_rate"
        android:title="@string/refresh_rate_title"
        android:summary="@string/refresh_rate_summary"
        android:entries="@array/refresh_rate_entries"
        android:entryValues="@array/refresh_rate_values"
        android:dialogTitle="@string/refresh_rate_dialogtitle"
        android:defaultValue="0" />

</PreferenceScreen>
