<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/LinearLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="mjm.trainschedule.MainActivity" >
    
    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="#00ABEE"
        android:textSize="18sp"
        android:textStyle="bold"
        android:layout_marginLeft="16dip"
        android:layout_marginRight="16dip"
        android:layout_marginTop="16dip"
        android:layout_marginBottom="4dip"
        android:text="@string/headertext" />

    <Spinner
        android:id="@+id/stationSpinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dip"
        android:layout_marginRight="16dip"
        android:layout_marginTop="4dip"
        android:layout_marginBottom="4dip" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dip"
        android:layout_marginRight="10dip"
        android:layout_marginTop="4dip"
        android:layout_marginBottom="4dip" >

        <Button
            android:id="@+id/selectStationHelBtn"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            style="?android:attr/buttonStyleSmall"
            android:onClick="selectStationHelBtn_onClick"
            android:text="@string/button_helsinki" />
        
        <Button
            android:id="@+id/selectStationOthersBtn"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            style="?android:attr/buttonStyleSmall"
            android:onClick="selectStationOtherBtn_onClick"
            android:text="@string/button_others" />

    </LinearLayout>

    <ProgressBar
	    android:id="@+id/markerProgress"
	    style="?android:attr/progressBarStyle"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:indeterminate="true"
	    android:layout_gravity="center"
	    android:visibility="gone" />

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:orientation="vertical" >	
			 
			    <!-- ListView (grid_items) -->
			    <LinearLayout android:id="@+id/listlayout"
			        android:layout_width="fill_parent"
			        android:layout_height="fill_parent">
			        
			        <ListView android:id="@+id/listview"
			            android:divider="#EEEEEE"
   						android:dividerHeight="2dip"
			            android:layout_height="fill_parent"
			            android:layout_width="fill_parent">
			        </ListView>
			    </LinearLayout>
        </LinearLayout>
<!--     </ScrollView> -->
</LinearLayout>
